syntax = "proto3";

package user;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc RecommendPosts(EmptyRequest) returns (PostRecommendationResponse){}
}

message User {
    string _id = 1;
    string username = 2;
    string password = 3;
    repeated string favoriteCategories = 4;
    UserInteraction userInteraction = 5;
    repeated string recommendedPosts = 6;
}

message UserInteraction {
    repeated string likedPosts = 1;
    repeated string bookmarkedPosts = 2;
    repeated string clickedPosts = 3;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    bool success = 1;
    string message = 2;
}

message EmptyRequest {}

message PostRecommendationResponse {
    repeated string postId = 1;
}

